--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </p>
 
     <p>
-        The Literate-generated documents are here: <a href="literate-htmls/index.html">literate-htmls/index.html</a>
+        The Literate-generated documents are here: <a href="literate-htmls/Examples_contents.html">literate-htmls/Examples_contents.html</a>
     </p>
 </body>
 </html>
