--- a/literate-htmls/Examples_contents.html
+++ b/literate-htmls/Examples_contents.html
@@ -36,6 +36,7 @@ able to give some explanation at the start of the book (if needed).
 <li>1. <a href="python-and-typescript.html">PythonAndTypescript</a></li>
 <li>2. <a href="python-and-c.html">PythonAndC</a></li>
 <li>3. <a href="associative-cartesian-product.html">Associative Cartesian Product</a></li>
+<li>4. <a href="ednf.html">Existential Disjunctive Normal Form</a></li>
 
 </ul>
 </div>
