--- a/literate-htmls/python-and-c.html
+++ b/literate-htmls/python-and-c.html
@@ -90,7 +90,7 @@ printf("hello world\n");
 <a name="2:2"><div class="section"><h4>2. And the Python part</h4></a>
 
 <div class="codeblock">
-<span class="codeblock_name">{<strong>main.py</strong> <a href="associative-cartesian-product.html#3:1">3:1</a>}</span>
+<span class="codeblock_name">{<strong>main.py</strong> <a href="python-and-c.html#2:2">2</a>}</span>
 <pre class="prettyprint">
 def hello():
     print('Hey dude')
