--- a/misc/plato-sample.html
+++ b/misc/plato-sample.html
@@ -95,10 +95,12 @@
     }
 
     .km {
-        font-size: xx-large;
+        font-size: 4rem;
+        text-align: center;;
     }
 
-    .en, .km {
+    .en {
+        font-size: 2rem;
         text-align: center;
     }
 </style>
