Add to homepage

--- a/index.html
+++ b/index.html
@@ -25,5 +25,9 @@
     <p>
         The Literate-generated documents are here: <a href="literate-htmls/Examples_contents.html">literate-htmls/Examples_contents.html</a>
     </p>
+
+    <p>
+        Additionally, an alternative implementation of miniKanren in multiple languages: <a href="bezae/bezae.html">bezae/bezae.html</a>
+    </p>
 </body>
 </html>
