Cartesian product blog post

--- a/index.html
+++ b/index.html
@@ -48,6 +48,14 @@
             </td>
         </tr>
         <tr>
+        	<td>
+        		The Cartesian Product in miniKanren
+        	</td>
+        	<td>
+        		<a href="scribble-htmls/the-cartesian-product-in-miniKanren.html">scribble-htmls/the-cartesian-product-in-miniKanren.html</a>
+        	</td>
+        </tr>
+        <tr>
             <td>
                 miniKanren and multivariate Horner schemes
             </td>
