--- a/index.html
+++ b/index.html
@@ -6,16 +6,17 @@
     <style>
         body {
             margin: 1.5rem; /* Use relative units */
+            font-size: 38pt;
         }
     </style>
 </head>
 <body>
     <p>
-        Welcome to the homepage of a collection of literate documents that explore the concept of relational programming, with a primary focus on miniKanren. Here, you'll find various implementations of miniKanren, optimization techniques for relational programming, useful tooling, and miscellaneous notes.
+        This is my collection of literate documents about relational programming in miniKanren.
     </p>
 
     <p>
-        I haven't found a singular tool for doing literate programming that I like best. So I use two: <a href="https://docs.racket-lang.org/scribble/">Scribble</a> works great for miniKanren embedded in Racket, because it can detect bound variables; for everything else, I use <a href="https://github.com/zyedidia/Literate">Literate</a>.
+        I wrote these blog posts using <a href="https://docs.racket-lang.org/scribble/">Scribble</a> and <a href="https://github.com/zyedidia/Literate">Literate</a>.
     </p>
 
     <table>
