Viewport meta tag

--- a/index.html
+++ b/index.html
@@ -3,12 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Cool Relations</title>
-    <style>
-        body {
-            margin: 1.5rem; /* Use relative units */
-            font-size: 38pt;
-        }
-    </style>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
     <p>
