--- a/misc/for-max.html
+++ b/misc/for-max.html
@@ -52,54 +52,14 @@ function solve() {
 
     const count = nums.map(x => 0);
 
-    let grid = new Array(height);
-    for (let i = 0; i < height; i++) {
-        grid[i] = new Array(width).fill(false);
-    }
-
-
-    /*             (i, j + 1)
-        (i - 1, j) (i, j    ) (i + 1, j)
-                   (i, j - 1)
-    */
-    function hasAdjacent(i, j, color) {
-        return (
-            (j + 1 < width  && grid[i][j + 1] === color) ||
-            (j - 1 >= 0     && grid[i][j - 1] === color) ||
-            (i + 1 < height && grid[i + 1][j] === color) ||
-            (i - 1 >= 0     && grid[i - 1][j] === color)
-        );
-    }
-
-
-    function recur(i, j) {
-        if (i === height) return true;
-        if (j === width) return recur(i + 1,  0);
-
-        for (let k = 0; k < nums.length; k++) {
-            if (count[k] === nums[k]) {
-                continue;
-            }
-
-            if (count[k] === 0 || hasAdjacent(i, j, colors[k])) {
-                grid[i][j] = colors[k];
-                count[k]++;
-
-                let result = recur(i, j + 1);
-                if (result) {
-                    return true;
-                }
-
-                grid[i][j] = false;
-                count[k]--;
-            }
+    let laidOut = [];
+    for (let i = 0; i < nums.length; i++) {
+        for (let j = 0; j < nums[i]; j++) {
+            laidOut.push(colors[i]);
         }
-
-        return false;
     }
-
-
-    recur(0, 0);
+ 
+    const grid = boustrophedon(laidOut, height, width);
 
     const table = document.getElementById('result');
     table.innerHTML = '';
@@ -114,6 +74,39 @@ function solve() {
 
         table.appendChild(tr);
     }
+}
+
+function boustrophedon(array, n, m) {
+    if (array.length !== n * m) {
+        alert('Precondition violated')
+        return;
+    }
+
+    let result = [];
+    let k = 0;
+    for (let i = 0; i < n; i++) {
+        let inner = [];
+
+        for (let j = 0; j < m; j++) {
+            inner.push(-1);
+        }
+
+        if (i % 2 === 0) {
+            for (let j = 0; j < m; j++) {
+                inner[j] = array[k];
+                k++;
+            }
+        } else {
+            for (let j = m - 1; j >= 0; j--) {
+                inner[j] = array[k];
+                k++;
+            }
+        }
+
+        result.push(inner);
+    }
+
+    return result;
 }
 
 
