--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
     </p>
 
     <p>
+        For a revamped version of the relations, see
+        <a href="cool-relations.html">cool-relations.html</a>.
+    </p>
+
+    <p>
         I wrote these blog posts using <a href="https://docs.racket-lang.org/scribble/">Scribble</a> and <a href="https://github.com/zyedidia/Literate">Literate</a>.
     </p>
 
